<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    android:id="@+id/dialogFrag"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_centerInParent="true"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="3dp">

            <RelativeLayout
                android:id="@+id/relative"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="7dp">

                <LinearLayout
                    android:id="@+id/linear_i"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:id="@+id/info"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/ic_info"
                        android:layout_marginStart="20dp"
                        android:tint="@color/colorPrimaryDark"
                        android:contentDescription="@string/todo" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        android:text="@string/information"/>
                </LinearLayout>

                <View
                    android:id="@+id/line"
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:background="@color/colorPrimaryDark"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_below="@id/linear_i"/>

                <RelativeLayout
                    android:id="@+id/relative_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_below="@id/line">

                    <TextView
                        android:id="@+id/country_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:text="@string/country"
                        android:textSize="20sp"
                        />

                    <TextView
                        android:id="@+id/country"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="90dp"
                        android:text="@string/value_kosong"
                        android:textSize="20sp"
                        tools:ignore="RelativeOverlap" />
                </RelativeLayout>
                <RelativeLayout
                    android:id="@+id/relative_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_below="@id/relative_1">

                    <TextView
                        android:id="@+id/cases_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:text="@string/cases"
                        android:textSize="20sp"/>

                    <TextView
                        android:id="@+id/cases"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="90dp"
                        android:text="@string/value_kosong"
                        android:textSize="20sp"
                        tools:ignore="RelativeOverlap" />
                </RelativeLayout>
                <RelativeLayout
                    android:id="@+id/relative_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_below="@id/relative_2">

                    <TextView
                        android:id="@+id/deaths_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:text="@string/deaths"
                        android:textSize="20sp"/>

                    <TextView
                        android:id="@+id/deaths"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="90dp"
                        android:textSize="20sp"
                        android:text="@string/value_kosong"
                        tools:ignore="RelativeOverlap" />
                </RelativeLayout>
                <RelativeLayout
                    android:id="@+id/relative_4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_below="@id/relative_3">

                    <TextView
                        android:id="@+id/recover_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:text="@string/recovered"
                        android:textSize="20sp"/>

                    <TextView
                        android:id="@+id/recovered"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="90dp"
                        android:textSize="20sp"
                        android:text="@string/value_kosong"
                        tools:ignore="RelativeOverlap" />
                </RelativeLayout>
                <RelativeLayout
                    android:id="@+id/relative_5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_below="@id/relative_4">

                    <TextView
                        android:id="@+id/active_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:text="@string/active"
                        android:textSize="20sp"/>

                    <TextView
                        android:id="@+id/active"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="90dp"
                        android:textSize="20sp"
                        android:text="@string/value_kosong"
                        tools:ignore="RelativeOverlap" />
                </RelativeLayout>
                <RelativeLayout
                    android:id="@+id/relative_6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_below="@id/relative_5">

                    <TextView
                        android:id="@+id/critical_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:text="@string/critical"
                        android:textSize="20sp"/>

                    <TextView
                        android:id="@+id/critical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="90dp"
                        android:textSize="20sp"
                        android:text="@string/value_kosong"
                        tools:ignore="RelativeOverlap" />
                </RelativeLayout>
                <RelativeLayout
                    android:id="@+id/relative_7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_below="@id/relative_6">

                    <TextView
                        android:id="@+id/today_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:text="@string/today_cases"
                        android:textSize="20sp"/>

                    <TextView
                        android:id="@+id/today_cases"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="90dp"
                        android:textSize="20sp"
                        android:text="@string/value_kosong"
                        tools:ignore="RelativeOverlap" />
                </RelativeLayout>
                <RelativeLayout
                    android:id="@+id/relative_8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_below="@id/relative_7">

                    <TextView
                        android:id="@+id/todayCases_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:text="@string/today_deaths"
                        android:textSize="20sp"/>

                    <TextView
                        android:id="@+id/today_deaths"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="90dp"
                        android:textSize="20sp"
                        android:text="@string/value_kosong"
                        tools:ignore="RelativeOverlap" />
                </RelativeLayout>
                <RelativeLayout
                    android:id="@+id/relative_9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_below="@id/relative_8">

                    <TextView
                        android:id="@+id/cases_per_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:text="@string/cases_per"
                        android:textSize="20sp"/>

                    <TextView
                        android:id="@+id/cases_per"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="90dp"
                        android:textSize="20sp"
                        android:text="@string/value_kosong"
                        tools:ignore="RelativeOverlap" />
                </RelativeLayout>

                <Button
                    android:id="@+id/btn_ok"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/relative_9"
                    android:layout_marginStart="50dp"
                    android:layout_marginEnd="50dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    android:background="@color/white"
                    android:text="@string/ok"/>
            </RelativeLayout>
    </androidx.cardview.widget.CardView>
</FrameLayout>